fixed button contrast ratio

--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@
   --text-color2: rgb(255, 255, 255, 0.75);
   --text-color3: rgb(255, 255, 255, 0.55);
   --text-color4: rgb(255, 255, 255, 0.255);
-  --accent-color: #3AAFA9;
+  --accent-color: #3aafa9a9;
   --warning-color: #e72222;
   --border-radius: 6px;
   --speed: 300ms;
